# AeroRiskAI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: bench.yml  ci.yml
ai_guardrail/: Dockerfile  pyproject.toml
ai_guardrail/aerorisk/: __init__.py  main.py
ai_guardrail/aerorisk/agents/agent1_anomaly/: agent.py  agent1_test.py  embedding.py  spoofing_hmm.py  velocity_check.py  vwap_monitor.py  wash_trade.py
ai_guardrail/aerorisk/agents/agent2_rag/: agent.py  agent2_test.py  compliance_loader.py  news_ingester.py  sanctions.py  user_profile.py  vector_search.py
ai_guardrail/aerorisk/agents/agent3_orchestrator/: agent.py  llm_client.py  prompts.py  redis_writer.py  risk_scorer.py
ai_guardrail/aerorisk/config/: settings.py
ai_guardrail/aerorisk/consumer/: consumer_test.py  event_parser.py  kafka_consumer.py
ai_guardrail/aerorisk/graph/: graph_test.py  pipeline.py  router.py  state.py
ai_guardrail/aerorisk/models/: anomaly_result.py  context_bundle.py  event.py  incident_report.py  risk_decision.py
ai_guardrail/aerorisk/observability/: __init__.py  metrics.py  tracing.py
ai_guardrail/aerorisk/storage/: __init__.py  qdrant_client.py
data/scripts/: generate_synthetic.py  seed_postgres.py  seed_qdrant.py
docs/agents/: agent1_design.md  agent2_design.md  agent3_prompts.md
docs/api/: grpc_reference.md  websocket_reference.md
docs/architecture/: system_design.md
docs/interview_prep/: behavioral_answers.md  coding_challenges.md  system_design_answers.md
engine/: go.mod  go.sum
(+68 files in other folders)
